<resources>
    <string name="app_name">Virtual Bookshelf</string>
    <string name="bookshelf_icon">Bookshelf Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="user_icon">User Icon</string>
    <string name="edit_profile_image_icon">Edit profile image</string>
    <string name="username">username</string>
    <string name="edit_username_icon">Edit username</string>
    <string name="User_all_book_number">All books: 0</string>
    <string name="User_read_book_number">Read books: 0</string>
    <string name="User_unread_book_number">Unread books: 0</string>
    <string name="User_currently_book_number">Books currently being read: 0</string>
    <string name="User_queue_book_number">Books in queue: 0</string>
    <string name="User_delete_database">Delete Database</string>
    <string name="new_username">new username</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="Database_delete_question">Are you sure, you want to delete database?</string>
    <string name="Database_delete_question_lower">(You will lose all your data)</string>
    <string name="go_back_to_main_activity">Go back to main activity</string>
    <string name="taken_photos_history">Taken photos history</string>
    <string name="take_a_photo">Take a photo!</string>
    <string name="history">history</string>
    <string name="taken_photo">Taken photo:</string>
    <string name="taken_image">taken image</string>
    <string name="process_image">Process image</string>
    <string name="could_not_load_image">Could not load image :(</string>
    <string name="open_camera_and_take_a_photo">Open camera and take a photo!</string>
    <string name="found_books">Found books:</string>
    <string name="no_books_could_be_found">No books could be found :(</string>
    <string name="book_image">book image</string>
    <string name="nulll">null</string>
    <string name="description">Description:</string>
    <string name="genre">Genre:</string>
    <string name="date">Date:</string>
    <string name="edit_book_status">edit book status</string>
    <string name="delete_book">Delete book</string>
    <string name="arey_you_sure_you_want_to_delete_book">Arey you sure you want to delete book?</string>
    <string name="it_will_be_lost_forever">(It will be lost forever)</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="currently_being_read">Currently being read</string>
    <string name="in_queue">In queue</string>
    <string name="isadded_button">isAdded_button</string>
    <string name="pause">-</string>
    <string name="edit_book_title">edit book title</string>
    <string name="edit_book_author">edit book author</string>
    <string name="edit_book_description">edit book description</string>
    <string name="edit_book_genre">edit book genre</string>
    <string name="edit_book_date">edit book date</string>
    <string name="new_book_title">new book title</string>
    <string name="new_book_author">new book author</string>
    <string name="new_book_description">new book description</string>
    <string name="new_book_genre">new book genre</string>
    <string name="new_book_date">new book date</string>
    <string name="add_books_to_database">Add books to database</string>
    <string name="status_image">status image</string>
</resources>