<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity">

    <!-- Upper part -->
    <RelativeLayout
        android:id="@+id/upperLayout_user"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#F4D9C8"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo button with navigation to main activity -->
        <ImageButton
            android:id="@+id/mainButton_user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookshelf_icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_bookshelf"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <!-- App name -->
        <TextView
            android:id="@+id/text_title_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/mainButton_user"
            android:fontFamily="@font/neuton_regular"
            android:paddingStart="8dp"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#BA8B7C"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap,RtlSymmetry,TextContrastCheck" />

        <!-- Logo button with navigation to user activity -->
        <ImageButton
            android:id="@+id/userButton_user"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/user_icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user"
            app:tint="#BA8B7C"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
    </RelativeLayout>

    <!-- Middle Part -->
    <ScrollView
        android:id="@+id/middleLayout_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFF6F2"
        app:layout_constraintTop_toBottomOf="@id/upperLayout_user"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <!-- Profile Photo -->
            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="200dp">

                <!-- Profile photo image view -->
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImage_user"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user_start"
                    app:shapeAppearanceOverlay="@style/Circular"/>

                <!-- Edit profile photo button -->
                <ImageButton
                    android:id="@+id/editProfileImage_user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_profile_image_icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_edit"
                    app:tint="#BA8B7C"
                    tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
            </FrameLayout>

            <!-- Username -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <!-- Username text -->
                <TextView
                    android:id="@+id/usernameText_user"
                    android:fontFamily="@font/neuton_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textColor="#BA8B7C"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <!-- Edit username button -->
                <ImageButton
                    android:id="@+id/editUsername_user"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_username_icon"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="@id/usernameText_user"
                    app:layout_constraintStart_toEndOf="@id/usernameText_user"
                    app:layout_constraintTop_toTopOf="@id/usernameText_user"
                    app:tint="#BA8B7C"
                    tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Books statistics -->
            <!-- All books -->
            <TextView
                android:id="@+id/allBooks_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/User_all_book_number"
                android:textColor="#BA8B7C"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <!-- Read books -->
            <TextView
                android:id="@+id/readBooks_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_read_book_number"
                android:textColor="#BA8B7C"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <!-- Unread books -->
            <TextView
                android:id="@+id/unreadBooks_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_unread_book_number"
                android:textColor="#BA8B7C"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <!-- Currently reading books -->
            <TextView
                android:id="@+id/currentlyReadingBooks_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_currently_book_number"
                android:textColor="#BA8B7C"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <!-- Queue books -->
            <TextView
                android:id="@+id/queueBooks_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User_queue_book_number"
                android:textColor="#BA8B7C"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <!-- Delete database button -->
            <Button
                android:id="@+id/deleteDatabase_user"
                android:fontFamily="@font/neuton_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="#E57373"
                android:padding="8dp"
                android:text="@string/User_delete_database"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </ScrollView>

    <!-- Lower part -->
    <LinearLayout
        android:id="@+id/bottomLayout_user"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="#F4D9C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo button with navigation to main activity -->
        <ImageButton
            android:id="@+id/cameraButton_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/camera_icon"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera"
            app:tint="#BA8B7C"
            tools:ignore="ImageContrastCheck" />

        <!-- Logo button with navigation to bookshelf activity -->
        <ImageButton
            android:id="@+id/bookshelfButton_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookshelf_icon"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bookshelf"
            app:tint="#BA8B7C"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
