<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_photo_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainProcessImageActivity">

    <!-- Upper part -->
    <RelativeLayout
        android:id="@+id/upperLayout_main_process_image"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#F4D9C8"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo button with navigation to main activity -->
        <ImageButton
            android:id="@+id/mainButton_main_process_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookshelf_icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_bookshelf"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,TouchTargetSizeCheck" />

        <!-- App name -->
        <TextView
            android:id="@+id/text_title_main_process_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/mainButton_main_process_image"
            android:fontFamily="@font/neuton_regular"
            android:paddingStart="8dp"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="#BA8B7C"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap,RtlSymmetry,TextContrastCheck" />

        <!-- Logo button with navigation to user activity -->
        <ImageButton
            android:id="@+id/userButton_main_process_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/user_icon"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user"
            app:tint="#BA8B7C"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
    </RelativeLayout>

    <!-- Middle Part -->
    <LinearLayout
        android:id="@+id/middleLayout_main_process_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFF6F2"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/upperLayout_main_process_image"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout_main_process_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Information text -->
            <TextView
                android:id="@+id/text_Info_main_process_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/neuton_regular"
                android:paddingStart="8dp"
                android:layout_centerVertical="true"
                android:text="@string/taken_photo"
                android:textColor="#BA8B7C"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap,RtlSymmetry,TextContrastCheck" />

            <!-- Go back button -->
            <ImageButton
                android:id="@+id/backButton_main_process_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/go_back_to_main_activity"
                android:scaleType="fitXY"
                android:src="@drawable/ic_button_back"
                app:tint="#BA8B7C"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Found Image -->
            <ImageView
                android:id="@+id/image_main_process_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="84dp"
                android:contentDescription="@string/taken_image"
                android:visibility="visible"/>

            <!-- No Image Information -->
            <TextView
                android:id="@+id/text_noPhoto_main_process_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/could_not_load_image"
                android:textColor="#BA8B7C"
                android:textSize="20sp"
                android:fontFamily="@font/neuton_regular"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:visibility="gone"/>

            <!-- Process Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/process_button_main_process_image"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_below="@+id/image_main_process_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-66dp"
                android:background="@drawable/rounded_button_background"
                android:fontFamily="@font/neuton_regular"
                android:text="@string/process_image"
                android:textColor="#BA8B7C"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TextSizeCheck" />
        </RelativeLayout>


    </LinearLayout>

    <!-- Lower part -->
    <LinearLayout
        android:id="@+id/bottomLayout_main_process_image"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="#F4D9C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo button with navigation to main activity -->
        <ImageButton
            android:id="@+id/cameraButton_main_process_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/camera_icon"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_camera"
            app:tint="#BA8B7C"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <!-- Logo button with navigation to bookshelf activity -->
        <ImageButton
            android:id="@+id/bookshelfButton_main_process_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookshelf_icon"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bookshelf"
            app:tint="#BA8B7C"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>