<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usernameChangeDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog_background"
    android:gravity="center"
    android:padding="24dp">

    <EditText
        android:id="@+id/usernameEditText"
        android:fontFamily="@font/neuton_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/new_username"
        android:background="@drawable/rounded_button_background"
        android:hint="@string/new_username"
        android:inputType="text"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColorHint="#B58373"
        android:textColor="#B58373"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/usernameConfirmButton"
            android:fontFamily="@font/neuton_regular"
            android:background="@drawable/rounded_button_background"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="#B58373"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/usernameCancelButton"
            android:fontFamily="@font/neuton_regular"
            android:background="@drawable/rounded_button_background"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#E57373"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>
